@@ -2,6 +2,7 @@ Objective Caml 3.11.2:
 ----------------------
 
 Bug fixes:
+- PR#4723: "clear_rules" function to empty the set of ocamlbuild rules
 - PR#4810: BSD problem with socket addresses, e.g. in Unix.getnameinfo
 - PR#4813: issue with parsing of float literals by the GNU assembler
 - PR#4818: missed opportunity for type-based optimization of bigarray accesses
